# physicell_cmake_windows

./: CMakeLists-0.txt  CMakeLists-1.txt  CMakeLists-2.txt  CMakeLists.txt  Make-clang  Make-clang-0  Make-covid19-clang  Makefile  PhysiCellConfig.h  PhysiCellConfig.h.in  README.md  README_original.md  README_windows.md  Readme.rwh  cleanup.sh  main.cpp
BioFVM/: BioFVM_microenvironment.cpp  BioFVM_solvers.cpp  CMakeLists.txt
core/: CMakeLists.txt  PhysiCell_cell.cpp  PhysiCell_cell_container.cpp  PhysiCell_constants-new.cpp  PhysiCell_constants.h  PhysiCell_phenotype.cpp  all_hdrs.sh  all_hdrs.txt  foo.ps
custom_modules/: CMakeLists.txt
modules/: CMakeLists.txt  PhysiCell_MultiCellDS.cpp  PhysiCell_MultiCellDS.h  PhysiCell_POV.h  PhysiCell_geometry.cpp  PhysiCell_settings.cpp
output/: initial.xml  initial_cells.mat  output00000000.xml  output00000001.xml  output00000001_cells.mat
sample_projects/: Makefile-default
sample_projects/template/: Makefile
vector_ops/: CMakeLists.txt
